# parProg

./: .gitignore
assigment1/dinner/: CMakeLists.txt  main.cpp
assigment1/heatmap/: CMakeLists.txt  Makefile  coords.csv  main.cpp  utils.hpp
assigment1/parsum/: CMakeLists.txt  InfInt.h  Makefile  main.cpp
assigment2/decrypt/: .gitignore  CMakeLists.txt  Makefile  decrypt.cpp  main.cpp  taskCryptDictMedium.txt  taskCryptPwSmall.txt  taskCryptSolution.txt  taskCryptSolutionSmall.txt
assigment2/heatmap/: CMakeLists.txt  Makefile  main.cpp
assigment2/hoi/: CMakeLists.txt  Makefile  main.cpp  main_experimental.cpp  md5.cpp
assignment1/dinner/: Makefile  main.cpp
assignment1/heatmap/: CMakeLists.txt  main.cpp
assignment1/parsum/: CMakeLists.txt
assignment2/decrypt/: CMakeLists.txt  decrypt.cpp  taskCryptDictM.txt  taskCryptDictSmall.txt  taskCryptPwSmall.txt
assignment2/heatmap/: CMakeLists.txt  Makefile  main.cpp
assignment2/hoi/: md5.hpp
assignment3/anteru/: CMakeLists.txt  Makefile  main.cpp
assignment3/anteru/kernels/: saxpy.cl
assignment3/heatmap/: CMakeLists.txt  Makefile  kernel.c  main.cpp  utils.hpp
assignment3/parsum/: CMakeLists.txt  Makefile  parsum.cl  parsum.cpp
assignment3/parsum/cmake/: FindOpenCL.cmake
assignment4/decrypt/: image.json  rebuild_container_osx
assignment4/decrypt/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.linux.yml  docker-compose.other.yml
assignment4/heatmap/: image.json  rebuild_container_linux  rebuild_container_win.bat
assignment4/heatmap/heatmap/: CMakeLists.txt  heatmap.cpp  one.csv  random.csv
assignment5/heatmap/: CMakeLists.txt  Makefile  main.cpp
assignment5/mpiavg/: CMakeLists.txt  Makefile  data.txt  main.cpp  mpiavg.cpp
raii_thread/: CMakeLists.txt  Makefile  main.cpp
vectorization/autovec_examples/: .gitignore  Makefile  autovector.cpp  example1.c  example2.c  example3.c  example4.c
vectorization/simd_examples/: Makefile  calc_abs.c  squared_2d_abs.c
vectorization/simd_examples/simdvid/: .gitignore  (+3 more)
(+11 files in other folders)
